--- a/openscholar/themes/hwpi_classic/css/responsive.classic.css
+++ b/openscholar/themes/hwpi_classic/css/responsive.classic.css
@@ -1,11 +1,5 @@
 @media (max-width: 1008px) {
 	
-.link-count-mobi-util {
-    width: 20%;
-}
-.link-count-mobi-search {
-    width: 20%;
-}
 ul.primary li a {
     background-color: #F3F3F1;
     border-color: #E4E4E4;
